--- a/Classificacao/notebooks/notebook.ipynb
+++ b/Classificacao/notebooks/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -25,12 +25,16 @@
     "# Adicionando o diretório ao sys.path se precisar importar módulos\n",
     "sys.path.append(caminho_script)\n",
     "\n",
-    "from classes.dados.dados import DataHandler as dh"
+    "from classes.dados.dados import DataHandler as dh\n",
+    "from classes.dados.GaussianData import GausianDataHandler as gdh\n",
+    "from classes.dados.monteCarlo import MonteCarlo as MC\n",
+    "from classes.modelos.GausianCov import GaussianCovModel as GCM\n",
+    "from classes.modelos.GausianTrad import GausianTraditionalModel as GTM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +67,127 @@
     "plt.scatter(dados[dados[:,2] == 5, 0], dados[dados[:,2] == 5, 1], color = \"r\", edgecolors=\"k\", label='Rabugento')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gausianData = gdh(\"EMGsDataset.csv\")\n",
+    "x, y = gausianData.x, gausianData.y\n",
+    "\n",
+    "x, y = x.T, y.T\n",
+    "# separar dados\n",
+    "x_treino, y_treino, x_test, y_test = MC.partition(x, y)\n",
+    "x_treino, y_treino, x_test, y_test = x_treino.T, y_treino.T, x_test.T, y_test.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.000e+00 1.000e+00 1.000e+00 ... 1.000e+00 1.000e+00 1.000e+00]\n",
+      " [1.990e+03 0.000e+00 0.000e+00 ... 1.438e+03 9.860e+02 0.000e+00]\n",
+      " [1.803e+03 3.929e+03 0.000e+00 ... 1.206e+03 0.000e+00 0.000e+00]]\n",
+      "[[5. 2. 1. ... 5. 3. 1.]]\n",
+      "[[1.000e+00 1.000e+00 1.000e+00 ... 1.000e+00 1.000e+00 1.000e+00]\n",
+      " [1.600e+01 1.876e+03 0.000e+00 ... 9.630e+02 0.000e+00 1.168e+03]\n",
+      " [3.952e+03 1.245e+03 0.000e+00 ... 0.000e+00 0.000e+00 0.000e+00]]\n",
+      "[[2. 5. 1. ... 3. 1. 3.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [x_treino, y_treino, x_test, y_test]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = GTM(x_treino, y_treino, np.array([1,2,3,4,5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\" pegar dadados da classe 2\"\n",
+    "model.getStatistcs()\n",
+    "\n",
+    "x_2 = model.separeted_matrix[2][\"x\"]\n",
+    "mean2 = model.statics[2][\"mean\"]\n",
+    "cov2 = model.statics[2][\"cov\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.000e+00 1.000e+00 1.000e+00 ... 1.000e+00 1.000e+00 1.000e+00]\n",
+      " [0.000e+00 0.000e+00 0.000e+00 ... 1.060e+02 0.000e+00 0.000e+00]\n",
+      " [3.929e+03 3.935e+03 3.462e+03 ... 3.934e+03 3.941e+03 3.941e+03]]\n",
+      "[[1.00000000e+00]\n",
+      " [1.19204374e+01]\n",
+      " [3.89696820e+03]]\n",
+      "[[    0.             0.             0.        ]\n",
+      " [    0.          2436.61805618   372.64926093]\n",
+      " [    0.           372.64926093 26234.15147135]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_2)\n",
+    "print(mean2)\n",
+    "print(cov2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\henri\\Documents\\pythonProjcs\\cadeira_IA_cirilo\\av2\\Classificacao\\classes\\modelos\\GausianTrad.py:56: RuntimeWarning: divide by zero encountered in log\n",
+      "  termo_1 = -0.5 * np.log(det_cov)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[inf inf inf ... inf inf inf]\n",
+      " [inf inf inf ... inf inf inf]\n",
+      " [inf inf inf ... inf inf inf]\n",
+      " ...\n",
+      " [inf inf inf ... inf inf inf]\n",
+      " [inf inf inf ... inf inf inf]\n",
+      " [inf inf inf ... inf inf inf]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.descriminante(x_test, mean2, cov2))"
    ]
   }
  ],
