--- a/Classificacao/notebooks/main.ipynb
+++ b/Classificacao/notebooks/main.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,43 +225,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_handler = gdh(\"EMGsDataset.csv\")\n",
-    "x1, y1 = data_handler.x, data_handler.y\n",
-    "data_handler.setMatrizes()\n",
-    "x2, y2 = data_handler.x, data_handler.y\n",
-    "y2 = gdh.yAsMatrix(y2)\n",
-    "x2, y2 = x2.T, y2.T\n"
+    "import json\n",
+    "\n",
+    "# Caminho para o arquivo JSON\n",
+    "file_path = 'meu_dicionario.json'\n",
+    "\n",
+    "# Carregar o JSON\n",
+    "with open(file_path, 'r') as file:\n",
+    "    dados:dict = json.load(file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gera tabela\n",
+    "header = [\"Modelos\", \"Média\", \"Desvio Padrão\", \"Maior Valor\", \"Menor Valor\"]\n",
+    "tabel = {i:[] for i in header}\n",
+    "tabel[\"Modelos\"] = list(dados.keys())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# media\n",
+    "for modelo in dados.keys():\n",
+    "    tabel[\"Média\"].append(np.mean(dados[modelo]))\n",
+    "    tabel[\"Desvio Padrão\"].append(np.std(dados[modelo]))\n",
+    "    tabel[\"Maior Valor\"].append(np.max(dados[modelo]))\n",
+    "    tabel[\"Menor Valor\"].append(np.min(dados[modelo]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelos : 8\n",
+      "Média : 8\n",
+      "Desvio Padrão : 8\n",
+      "Maior Valor : 8\n",
+      "Menor Valor : 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in tabel.items():\n",
+    "    print(f\"{i} : {len(j)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MQO tradicional           Média: 0.72 | Desvio Padrão: 0.01 | Maior Valor: 0.74 | Menor Valor: 0.71\n",
+      "Classificador Gaussiano Tradicional Média: 0.80 | Desvio Padrão: 0.00 | Maior Valor: 0.81 | Menor Valor: 0.79\n",
+      "Classificador Gaussiano (Cov. de todo cj. treino) Média: 0.95 | Desvio Padrão: 0.00 | Maior Valor: 0.95 | Menor Valor: 0.94\n",
+      "Classificador Gaussiano (Cov. Agregada) Média: 0.96 | Desvio Padrão: 0.00 | Maior Valor: 0.97 | Menor Valor: 0.96\n",
+      "Classificador de Bayes Ingenuo (Naive Bayes Classifier) Média: 0.95 | Desvio Padrão: 0.00 | Maior Valor: 0.95 | Menor Valor: 0.94\n",
+      "Classificador Gaussiano Regularizado (Friedman λ = 0.25) Média: 0.97 | Desvio Padrão: 0.00 | Maior Valor: 0.98 | Menor Valor: 0.97\n",
+      "Classificador Gaussiano Regularizado (Friedman λ = 0.5) Média: 0.97 | Desvio Padrão: 0.00 | Maior Valor: 0.97 | Menor Valor: 0.96\n",
+      "Classificador Gaussiano Regularizado (Friedman λ = 0.75) Média: 0.96 | Desvio Padrão: 0.00 | Maior Valor: 0.97 | Menor Valor: 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Exibir a tabela\n",
+    "for i in range(len(tabel[\"Modelos\"])):\n",
+    "    print(f\"{tabel['Modelos'][i]:<25} Média: {tabel['Média'][i]:.2f} | \"\n",
+    "          f\"Desvio Padrão: {tabel['Desvio Padrão'][i]:.2f} | Maior Valor: {tabel['Maior Valor'][i]:.2f} | \"\n",
+    "          f\"Menor Valor: {tabel['Menor Valor'][i]:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Modelos</th>\n",
+       "      <th>Média</th>\n",
+       "      <th>Desvio Padrão</th>\n",
+       "      <th>Maior Valor</th>\n",
+       "      <th>Menor Valor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>MQO tradicional</td>\n",
+       "      <td>0.724083</td>\n",
+       "      <td>0.006738</td>\n",
+       "      <td>0.7431</td>\n",
+       "      <td>0.7056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Classificador Gaussiano Tradicional</td>\n",
+       "      <td>0.800088</td>\n",
+       "      <td>0.003625</td>\n",
+       "      <td>0.8102</td>\n",
+       "      <td>0.7897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Classificador Gaussiano (Cov. de todo cj. treino)</td>\n",
+       "      <td>0.948207</td>\n",
+       "      <td>0.001978</td>\n",
+       "      <td>0.9533</td>\n",
+       "      <td>0.9421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Classificador Gaussiano (Cov. Agregada)</td>\n",
+       "      <td>0.962421</td>\n",
+       "      <td>0.001854</td>\n",
+       "      <td>0.9680</td>\n",
+       "      <td>0.9565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Classificador de Bayes Ingenuo (Naive Bayes Classifier)</td>\n",
+       "      <td>0.947119</td>\n",
+       "      <td>0.002007</td>\n",
+       "      <td>0.9523</td>\n",
+       "      <td>0.9408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Classificador Gaussiano Regularizado (Friedman λ = 0.25)</td>\n",
+       "      <td>0.974693</td>\n",
+       "      <td>0.001460</td>\n",
+       "      <td>0.9801</td>\n",
+       "      <td>0.9701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Classificador Gaussiano Regularizado (Friedman λ = 0.5)</td>\n",
+       "      <td>0.967817</td>\n",
+       "      <td>0.001664</td>\n",
+       "      <td>0.9738</td>\n",
+       "      <td>0.9627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Classificador Gaussiano Regularizado (Friedman λ = 0.75)</td>\n",
+       "      <td>0.964727</td>\n",
+       "      <td>0.001763</td>\n",
+       "      <td>0.9699</td>\n",
+       "      <td>0.9595</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "x_treino, y_treino, x_test, y_test = MC.partition2(x1, y1)\n",
-    "x_treino2, y_treino2, x_test2, y_test2 = MC.partition2(x2, y2)\n",
+    "import pandas as pd\n",
+    "from IPython.display import display, HTML\n",
     "\n",
-    "dados_[\"MQO tradicional\"] =  MAOtradicional(x_treino2, y_treino2, x_test2, y_test2)\n",
-    "dados_[\"Classificador Gaussiano Tradicional\"] = GaussianoTradicional(x_treino, y_treino, x_test, y_test)\n",
-    "dados_[\"Classificador Gaussiano (Cov. de todo cj. treino)\"] = GaussianoCovariancia(x_treino, y_treino, x_test, y_test)\n",
-    "dados_[\"Classificador Gaussiano (Cov. Agregada)\"] = GaussianoAgregado(x_treino, y_treino, x_test, y_test)\n",
-    "dados_[\"Classificador de Bayes Ingenuo (Naive Bayes Classifier)\"] = GaussianoNaive(x_treino, y_treino, x_test, y_test)\n",
-    "for lamb in lmbdas:\n",
-    "    dados_[title.format(lmbda = lamb)] = GaussianoRegular(x_treino, y_treino, x_test, y_test, lamb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dados_[\"Classificador de Bayes Ingenuo (Naive Bayes Classifier)\"] = GaussianoNaive(x_treino, y_treino, x_test, y_test)"
+    "# Configuração para evitar quebra de linha\n",
+    "pd.set_option('display.width', 1000)\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "\n",
+    "# Criar e exibir o DataFrame\n",
+    "df_results = pd.DataFrame(tabel)\n",
+    "\n",
+    "# Adiciona estilo para alinhar a tabela à esquerda\n",
+    "html_table = df_results.to_html(index=False, justify='left', border=0)\n",
+    "\n",
+    "\n",
+    "display(HTML(html_table))"
    ]
   },
   {
@@ -270,30 +427,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for lamb in lmbdas:\n",
-    "    dados_[title.format(lmbda = lamb)] = GaussianoRegular(x_treino, y_treino, x_test, y_test, lamb)"
+    "df_results.to_csv(\"resultados_modelos.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "dados_[\"Classificador Gaussiano Regularizado (Friedman λ = 0.5)\"] = GaussianoRegular(x_treino, y_treino, x_test, y_test, 0.5)\n",
-    "\n",
-    "dados_[\"Classificador Gaussiano Regularizado (Friedman λ = 0.5)\"] = GaussianoRegular(x_treino, y_treino, x_test, y_test, 0.25)\n",
-    "\n",
-    "dados_[\"Classificador Gaussiano Regularizado (Friedman λ = 0.5)\"] = GaussianoRegular(x_treino, y_treino, x_test, y_test, 0.75)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
