--- a/Classificacao/notebooks/main.ipynb
+++ b/Classificacao/notebooks/main.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,15 +289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MQO tradicional           Média: 0.72 | Desvio Padrão: 0.01 | Maior Valor: 0.74 | Menor Valor: 0.71\n",
-      "Classificador Gaussiano Tradicional Média: 0.80 | Desvio Padrão: 0.00 | Maior Valor: 0.81 | Menor Valor: 0.79\n",
+      "MQO tradicional           Média: 0.72 | Desvio Padrão: 0.01 | Maior Valor: 0.75 | Menor Valor: 0.71\n",
+      "Classificador Gaussiano Tradicional Média: 0.99 | Desvio Padrão: 0.00 | Maior Valor: 0.99 | Menor Valor: 0.99\n",
       "Classificador Gaussiano (Cov. de todo cj. treino) Média: 0.95 | Desvio Padrão: 0.00 | Maior Valor: 0.95 | Menor Valor: 0.94\n",
       "Classificador Gaussiano (Cov. Agregada) Média: 0.96 | Desvio Padrão: 0.00 | Maior Valor: 0.97 | Menor Valor: 0.96\n",
       "Classificador de Bayes Ingenuo (Naive Bayes Classifier) Média: 0.95 | Desvio Padrão: 0.00 | Maior Valor: 0.95 | Menor Valor: 0.94\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
       "text/html": [
        "<table class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr style=\"text-align: left;\">\n",
        "      <th>Modelos</th>\n",
        "      <th>Média</th>\n",
        "      <th>Desvio Padrão</th>\n",
@@ -337,59 +337,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>MQO tradicional</td>\n",
-       "      <td>0.724083</td>\n",
-       "      <td>0.006738</td>\n",
-       "      <td>0.7431</td>\n",
-       "      <td>0.7056</td>\n",
+       "      <td>0.723992</td>\n",
+       "      <td>0.006839</td>\n",
+       "      <td>0.7453</td>\n",
+       "      <td>0.7062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Classificador Gaussiano Tradicional</td>\n",
-       "      <td>0.800088</td>\n",
-       "      <td>0.003625</td>\n",
-       "      <td>0.8102</td>\n",
-       "      <td>0.7897</td>\n",
+       "      <td>0.988723</td>\n",
+       "      <td>0.000992</td>\n",
+       "      <td>0.9917</td>\n",
+       "      <td>0.9856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Classificador Gaussiano (Cov. de todo cj. treino)</td>\n",
-       "      <td>0.948207</td>\n",
-       "      <td>0.001978</td>\n",
-       "      <td>0.9533</td>\n",
-       "      <td>0.9421</td>\n",
+       "      <td>0.948380</td>\n",
+       "      <td>0.001957</td>\n",
+       "      <td>0.9538</td>\n",
+       "      <td>0.9431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Classificador Gaussiano (Cov. Agregada)</td>\n",
-       "      <td>0.962421</td>\n",
-       "      <td>0.001854</td>\n",
-       "      <td>0.9680</td>\n",
-       "      <td>0.9565</td>\n",
+       "      <td>0.962624</td>\n",
+       "      <td>0.001713</td>\n",
+       "      <td>0.9677</td>\n",
+       "      <td>0.9576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Classificador de Bayes Ingenuo (Naive Bayes Classifier)</td>\n",
-       "      <td>0.947119</td>\n",
-       "      <td>0.002007</td>\n",
-       "      <td>0.9523</td>\n",
-       "      <td>0.9408</td>\n",
+       "      <td>0.947276</td>\n",
+       "      <td>0.002033</td>\n",
+       "      <td>0.9533</td>\n",
+       "      <td>0.9418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Classificador Gaussiano Regularizado (Friedman λ = 0.25)</td>\n",
-       "      <td>0.974693</td>\n",
-       "      <td>0.001460</td>\n",
-       "      <td>0.9801</td>\n",
-       "      <td>0.9701</td>\n",
+       "      <td>0.974871</td>\n",
+       "      <td>0.001364</td>\n",
+       "      <td>0.9788</td>\n",
+       "      <td>0.9690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Classificador Gaussiano Regularizado (Friedman λ = 0.5)</td>\n",
-       "      <td>0.967817</td>\n",
-       "      <td>0.001664</td>\n",
-       "      <td>0.9738</td>\n",
-       "      <td>0.9627</td>\n",
+       "      <td>0.968037</td>\n",
+       "      <td>0.001596</td>\n",
+       "      <td>0.9728</td>\n",
+       "      <td>0.9630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Classificador Gaussiano Regularizado (Friedman λ = 0.75)</td>\n",
-       "      <td>0.964727</td>\n",
-       "      <td>0.001763</td>\n",
-       "      <td>0.9699</td>\n",
-       "      <td>0.9595</td>\n",
+       "      <td>0.964918</td>\n",
+       "      <td>0.001659</td>\n",
+       "      <td>0.9697</td>\n",
+       "      <td>0.9599</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
